增加模型近24小时运行统计
